--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       overflow-y: auto;
       background-color: rgba(0, 51, 102, 0.6);
       border-radius: 8px;
-      text-align: right;
-      direction: rtl; /* لتنسيق عربي أفضل */
+      text-align: left;
+      direction: ltr; /* لتنسيق عربي أفضل */
       font-family: 'Cairo', sans-serif;
       box-shadow: inset 0 0 5px rgba(255,255,255,0.1);
     }
