--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
       background: linear-gradient(135deg, #001a33, #003366);
       color: var(--light);
       min-height: 100vh;
-      padding: 20px 10px 70px; /* رفع التنسيق مكان الصورة */
+      padding: 20px 10px 70px;
       text-align: center;
       font-size: 14px;
     }
 
     .invite-container {
       max-width: 480px;
-      margin: 0 auto; /* رفع التنسيق */
+      margin: 0 auto;
       background-color: rgba(0, 40, 80, 0.5);
       border-radius: 10px;
       padding: 20px 25px 25px;
@@ -92,7 +92,6 @@
       opacity: 1;
     }
 
-    /* Friends list styles */
     #friendsCount {
       margin-top: 15px;
       font-size: 15px;
@@ -126,7 +125,6 @@
       border-bottom: none;
     }
 
-    /* Bottom Navigation */
     .bottom-nav {
       position: fixed;
       bottom: 0;
@@ -168,9 +166,7 @@
 </head>
 <body>
 
-  <!-- Friends Tab Content -->
   <div id="friends-tab" class="tab-content active">
-
     <div class="invite-container">
       <div class="title">Invite Friends</div>
       <div class="subtitle">Invite a friend and get <strong>100 Miga</strong></div>
@@ -188,7 +184,6 @@
     </div>
   </div>
 
-  <!-- Bottom Navigation -->
   <div class="bottom-nav">  
     <div class="nav-item" data-tab="home-tab">
       <i class="fas fa-home"></i>
@@ -212,7 +207,6 @@
     </div>
   </div>
 
-  <!-- JavaScript -->
   <script>
     // Tab Switching Functionality
     document.querySelectorAll('.nav-item').forEach(item => {
@@ -233,7 +227,7 @@
           copyMsg.classList.remove('visible');
         }, 2000);
       }).catch(err => {
-        alert('فشل النسخ: ' + err);
+        alert('Copy failed: ' + err);
       });
     }
 
@@ -242,12 +236,9 @@
     });
   </script>
 
-  <!-- Telegram Web App SDK -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
-  <!-- Firebase Initialization and Referral Link Script -->
   <script>
-    // Firebase configuration (استبدل القيم بقيم مشروعك)
     const firebaseConfig = {
       apiKey: "AIzaSyBZZGMEtMsgd1igtipcG84tz98K9Tokb34",
       authDomain: "migamining-c6c20.firebaseapp.com",
@@ -259,11 +250,9 @@
       measurementId: "G-VXPKJSHPRC"
     };
 
-    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const database = firebase.database();
 
-    // دالة لجلب باراميتر من رابط الصفحة
     function getQueryParam(param) {
       const urlParams = new URLSearchParams(window.location.search);
       return urlParams.get(param);
@@ -276,40 +265,56 @@
       const referralLink = `https://t.me/Migamining_bot?start=${referralId}`;
       inviteLink.textContent = referralLink;
 
-      // تسجيل المستخدم في Firebase إذا لم يكن موجودًا
+      // Register user if not exists with error handling
       const userRef = database.ref('users/' + referralId);
-      userRef.once('value', snapshot => {
-        if (!snapshot.exists()) {
-          userRef.set({
-            referrals: [],
-            username: window.Telegram?.WebApp?.initDataUnsafe?.user?.username || "NoUsername"
-          });
-        }
-      });
+      userRef.once('value')
+        .then(snapshot => {
+          if (!snapshot.exists()) {
+            userRef.set({
+              referrals: [],
+              username: window.Telegram?.WebApp?.initDataUnsafe?.user?.username || "NoUsername"
+            }).catch(err => {
+              alert('Error saving your data: ' + err.message);
+            });
+          }
+        })
+        .catch(err => {
+          alert('Error fetching user data: ' + err.message);
+        });
 
-      // جلب وعرض عدد وأسماء المدعوين
+      // Fetch and display referrals with error handling
       const referralsRef = database.ref('users/' + referralId + '/referrals');
       referralsRef.on('value', snapshot => {
         const referrals = snapshot.val() || [];
         const friendsCountElem = document.getElementById('friendsCount');
         const friendsListElem = document.getElementById('friendsList');
 
-        // تحديث عدد المدعوين
         friendsCountElem.innerHTML = `Friends invited: <strong>${referrals.length}</strong>`;
-
-        // مسح القائمة القديمة
         friendsListElem.innerHTML = '';
 
-        // جلب بيانات كل مدعو وعرض أسمائهم بشكل مرتب وأنيق
-        referrals.forEach((refId) => {
-          database.ref('users/' + refId).once('value').then(userSnap => {
-            const userData = userSnap.val();
-            const username = userData?.username || "Unknown";
-            const li = document.createElement('li');
-            li.textContent = username + ` (ID: ${refId})`;
-            friendsListElem.appendChild(li);
+        if (referrals.length === 0) {
+          const li = document.createElement('li');
+          li.textContent = "No friends invited yet.";
+          friendsListElem.appendChild(li);
+        } else {
+          referrals.forEach((refId) => {
+            database.ref('users/' + refId).once('value')
+              .then(userSnap => {
+                const userData = userSnap.val();
+                const username = userData?.username || "Unknown";
+                const li = document.createElement('li');
+                li.textContent = username + ` (ID: ${refId})`;
+                friendsListElem.appendChild(li);
+              })
+              .catch(err => {
+                const li = document.createElement('li');
+                li.textContent = `Error fetching friend data (ID: ${refId})`;
+                friendsListElem.appendChild(li);
+              });
           });
-        });
+        }
+      }, err => {
+        alert('Error fetching friends list: ' + err.message);
       });
 
     } else {
